--- a/Carnet_jupyter.ipynb
+++ b/Carnet_jupyter.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "source": [
     "### Partage du carnet \n",
-    "Le carnet a été partagé sur GitHub. Voici le lien : [Lien vers le dépôt GitHub]"
+    "Le carnet a été partagé sur GitHub. Voici le lien : https://github.com/TSLA-stack/testrepo/blob/main/Carnet_jupyter.ipynb"
    ]
   },
   {
